apps/k8s/base/api/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: api
