apps/k8s/base/api/network-policy.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: api
spec:
  podSelector:
    matchLabels:
      app: api
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            name: ingress
    - from:
      ports:
        - port: 80
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            name: mysql
    - to:
      ports:
        - port: 3306
